...
            ) {
                Text(
                    text = "%02d:%02d".format(time / 60, time % 60),
                    modifier = Modifier.padding(top = 12.dp),
                )
                TextButton(onClick = { scheduleTimes.removeAt(index) }) {
                    Text("Remove")
                }
            }
        }
        Button(onClick = onAddTimeClick, modifier = Modifier.fillMaxWidth()) {
            Text("Add time")
        }
...
